--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1250,6 +1250,90 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-smmdndjqug {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-smmdndjqug h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-smmdndjqug p {
+  color: #767676;
+  text-align: left;
+}
+.cid-smmdndjqug .card-box {
+  padding-top: 2rem;
+}
+.cid-smmdndjqug .card-wrapper {
+  height: 100%;
+}
+.cid-smmdndjqug .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-smmdndjqug P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-soQgdKUWne {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-soQgdKUWne h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-soQgdKUWne p {
+  color: #767676;
+  text-align: left;
+}
+.cid-soQgdKUWne .card-box {
+  padding-top: 2rem;
+}
+.cid-soQgdKUWne .card-wrapper {
+  height: 100%;
+}
+.cid-soQgdKUWne .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-soQgdKUWne P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-soQgH2Y4f8 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-soQgH2Y4f8 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-soQgH2Y4f8 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-soQgH2Y4f8 .card-box {
+  padding-top: 2rem;
+}
+.cid-soQgH2Y4f8 .card-wrapper {
+  height: 100%;
+}
+.cid-soQgH2Y4f8 .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-soQgH2Y4f8 P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
