--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -128,23 +128,23 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #972424 !important;
-  border-color: #972424 !important;
-  color: #ffffff !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #808080 !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus,
 .btn-secondary.active {
-  color: #ffffff !important;
-  background-color: #591515 !important;
-  border-color: #591515 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
-  color: #ffffff !important;
-  background-color: #591515 !important;
-  border-color: #591515 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-info,
 .btn-info:active {
@@ -292,22 +292,22 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #451010;
-  color: #451010;
+  border-color: #cccccc;
+  color: #cccccc;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
-  color: #ffffff;
-  background-color: #972424;
-  border-color: #972424;
+  color: #808080;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
-  color: #ffffff !important;
-  background-color: #972424 !important;
-  border-color: #972424 !important;
+  color: #808080 !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -427,7 +427,7 @@ body {
   color: #972424 !important;
 }
 .text-secondary {
-  color: #972424 !important;
+  color: #ffffff !important;
 }
 .text-success {
   color: #f7ed4a !important;
@@ -453,7 +453,7 @@ a.text-primary:focus {
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #451010 !important;
+  color: #cccccc !important;
 }
 a.text-success:hover,
 a.text-success:focus {
@@ -593,8 +593,8 @@ blockquote {
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
-  color: #ffffff !important;
-  background: #972424 !important;
+  color: #000000 !important;
+  background: #ffffff !important;
   box-shadow: none !important;
 }
 .lazy-bg {
@@ -1194,6 +1194,34 @@ section.lazy-placeholder:after {
   text-align: center;
   color: #ffffff;
 }
+.cid-sp5NpiDGUW {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-sp5NpiDGUW h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sp5NpiDGUW p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sp5NpiDGUW .card-box {
+  padding-top: 2rem;
+}
+.cid-sp5NpiDGUW .card-wrapper {
+  height: 100%;
+}
+.cid-sp5NpiDGUW .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-sp5NpiDGUW P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-rVWb0egJiB {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1303,34 +1331,6 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-soQgdKUWne P {
-  color: #ffffff;
-  text-align: center;
-}
-.cid-soQgH2Y4f8 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #972424;
-}
-.cid-soQgH2Y4f8 h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-soQgH2Y4f8 p {
-  color: #767676;
-  text-align: left;
-}
-.cid-soQgH2Y4f8 .card-box {
-  padding-top: 2rem;
-}
-.cid-soQgH2Y4f8 .card-wrapper {
-  height: 100%;
-}
-.cid-soQgH2Y4f8 .card-title {
-  text-align: center;
-  color: #ffffff;
-}
-.cid-soQgH2Y4f8 P {
   color: #ffffff;
   text-align: center;
 }
