--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1222,6 +1222,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-sq3Sfxl8Gg {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-sq3Sfxl8Gg h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sq3Sfxl8Gg p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sq3Sfxl8Gg .card-box {
+  padding-top: 2rem;
+}
+.cid-sq3Sfxl8Gg .card-wrapper {
+  height: 100%;
+}
+.cid-sq3Sfxl8Gg .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-sq3Sfxl8Gg P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-rVWb0egJiB {
   padding-top: 0px;
   padding-bottom: 0px;
