--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1181,6 +1181,30 @@ section.lazy-placeholder:after {
 .cid-scCSI2MP92 H2 {
   color: #972424;
 }
+.cid-sqFyMNnDRq {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-sqFyMNnDRq .image-block {
+  margin: auto;
+}
+.cid-sqFyMNnDRq .mbr-figure {
+  margin: 0 auto;
+}
+.cid-sqFyMNnDRq figcaption {
+  position: relative;
+}
+.cid-sqFyMNnDRq figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-sqFyMNnDRq .image-block {
+    width: 100% !important;
+  }
+}
 .cid-rl9EmhGxVT {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -1417,6 +1441,9 @@ section.lazy-placeholder:after {
     width: 100% !important;
     height: auto !important;
   }
+}
+.cid-sb7IS07Vxl H2 {
+  color: #7f1933;
 }
 .cid-rOLv5bwX3C {
   padding-top: 15px;
