--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,9 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
-
-
-
-
-
 body {
   font-family: Rubik;
 }
@@ -1383,6 +1377,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-soQgdKUWne P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-srtFpJElbQ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-srtFpJElbQ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-srtFpJElbQ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-srtFpJElbQ .card-box {
+  padding-top: 2rem;
+}
+.cid-srtFpJElbQ .card-wrapper {
+  height: 100%;
+}
+.cid-srtFpJElbQ .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-srtFpJElbQ P {
   color: #ffffff;
   text-align: center;
 }
