--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1006,7 +1006,7 @@ section.lazy-placeholder:after {
   color: #972424 !important;
 }
 .cid-rn6iC4ULb3 {
-  background-image: url("../../../assets/images/radiographs-spine-fingers.jpg");
+  background-image: url("../../../assets/images/ok1sdm.jpg");
 }
 .cid-rn6iC4ULb3 .mbr-figure {
   margin: 0 auto;
