--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1467,6 +1467,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-sFza1usycL {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-sFza1usycL h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sFza1usycL p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sFza1usycL .card-box {
+  padding-top: 2rem;
+}
+.cid-sFza1usycL .card-wrapper {
+  height: 100%;
+}
+.cid-sFza1usycL .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-sFza1usycL P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
@@ -1525,55 +1553,6 @@ section.lazy-placeholder:after {
 }
 .cid-sb7IS07Vxl H2 {
   color: #7f1933;
-}
-.cid-rOLv5bwX3C {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #972424;
-}
-.cid-rOLv5bwX3C .mbr-text,
-.cid-rOLv5bwX3C blockquote {
-  color: #767676;
-}
-.cid-rOLv5bwX3C .mbr-text P {
-  text-align: center;
-}
-.cid-rOLv5bwX3C .mbr-text {
-  color: #ffffff;
-}
-.cid-rc3bOGaFcq {
-  background: #972424;
-  padding-top: 0px;
-  padding-bottom: 30px;
-}
-.cid-rc3bOGaFcq .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-rc3bOGaFcq .video-block {
-    width: 100% !important;
-  }
-}
-.cid-sDNLy1SlbI {
-  background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-.cid-sDNLy1SlbI .image-block {
-  margin: auto;
-}
-.cid-sDNLy1SlbI figcaption {
-  position: relative;
-}
-.cid-sDNLy1SlbI figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-sDNLy1SlbI .image-block {
-    width: 100% !important;
-  }
 }
 .cid-qSpOwpGRnX {
   padding-top: 15px;
