--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1043,6 +1043,30 @@ section.lazy-placeholder:after {
 .cid-sb7I9T0rFE H2 {
   color: #972424;
 }
+.cid-sqFyMNnDRq {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-sqFyMNnDRq .image-block {
+  margin: auto;
+}
+.cid-sqFyMNnDRq .mbr-figure {
+  margin: 0 auto;
+}
+.cid-sqFyMNnDRq figcaption {
+  position: relative;
+}
+.cid-sqFyMNnDRq figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-sqFyMNnDRq .image-block {
+    width: 100% !important;
+  }
+}
 .cid-qCMoGEh2iY {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1177,30 +1201,6 @@ section.lazy-placeholder:after {
 }
 .cid-scCSI2MP92 H2 {
   color: #972424;
-}
-.cid-sqFyMNnDRq {
-  background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-.cid-sqFyMNnDRq .image-block {
-  margin: auto;
-}
-.cid-sqFyMNnDRq .mbr-figure {
-  margin: 0 auto;
-}
-.cid-sqFyMNnDRq figcaption {
-  position: relative;
-}
-.cid-sqFyMNnDRq figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-sqFyMNnDRq .image-block {
-    width: 100% !important;
-  }
 }
 .cid-rl9EmhGxVT {
   padding-top: 15px;
@@ -1492,6 +1492,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sFza1usycL P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sMFmeGpU8h {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-sMFmeGpU8h h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sMFmeGpU8h p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sMFmeGpU8h .card-box {
+  padding-top: 2rem;
+}
+.cid-sMFmeGpU8h .card-wrapper {
+  height: 100%;
+}
+.cid-sMFmeGpU8h .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-sMFmeGpU8h P {
   color: #ffffff;
   text-align: center;
 }
