--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1202,6 +1202,88 @@ section.lazy-placeholder:after {
 .cid-scCSI2MP92 H2 {
   color: #972424;
 }
+.cid-sPNRz5zUWh {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-sPNRz5zUWh .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-sPNRz5zUWh .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-sPNRz5zUWh .content-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-sPNRz5zUWh H2 {
+  color: #972424;
+}
+.cid-sPNPVNy9tF {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.cid-sPNPVNy9tF .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-sPNPVNy9tF .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sPNPVNy9tF .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sPNPVNy9tF .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-sPNPVNy9tF .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-sPNPVNy9tF .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-sPNPVNy9tF .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-sPNPVNy9tF .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-sPNPVNy9tF .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
 .cid-rl9EmhGxVT {
   padding-top: 15px;
   padding-bottom: 0px;
