--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1664,6 +1664,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-t75Rtg8tZG {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-t75Rtg8tZG h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-t75Rtg8tZG p {
+  color: #767676;
+  text-align: left;
+}
+.cid-t75Rtg8tZG .card-box {
+  padding-top: 2rem;
+}
+.cid-t75Rtg8tZG .card-wrapper {
+  height: 100%;
+}
+.cid-t75Rtg8tZG .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-t75Rtg8tZG P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
