--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1006,7 +1006,7 @@ section.lazy-placeholder:after {
   color: #972424 !important;
 }
 .cid-rn6iC4ULb3 {
-  background-image: url("../../../assets/images/ok1sdm.jpg");
+  background-image: url("../../../assets/images/cbusradiology-homehero2-1600x900.jpg");
 }
 .cid-rn6iC4ULb3 .mbr-figure {
   margin: 0 auto;
@@ -1032,7 +1032,7 @@ section.lazy-placeholder:after {
   color: #bf1515;
 }
 .cid-rn6iC4ULb3 H3 {
-  color: #7f1933;
+  color: #972424;
 }
 .cid-sb7I9T0rFE {
   padding-top: 60px;
