--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1223,47 +1223,46 @@ section.lazy-placeholder:after {
 .cid-sPNRz5zUWh H2 {
   color: #972424;
 }
-.cid-sPNPVNy9tF {
+.cid-tuJQSAHKw6 {
   padding-top: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
   overflow: hidden;
   box-sizing: border-box;
 }
-.cid-sPNPVNy9tF .mbr-slider .carousel-control {
+.cid-tuJQSAHKw6 .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-sPNPVNy9tF .mbr-slider .carousel-control-prev {
+.cid-tuJQSAHKw6 .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-sPNPVNy9tF .mbr-slider .carousel-control-next {
+.cid-tuJQSAHKw6 .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-sPNPVNy9tF .mbr-slider .modal-body .close {
+.cid-tuJQSAHKw6 .mbr-slider .modal-body .close {
   background: #1b1b1b;
 }
-.cid-sPNPVNy9tF .mbr-gallery-item > div::before {
+.cid-tuJQSAHKw6 .mbr-gallery-item > div::before {
   content: '';
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #972424;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
 }
-.cid-sPNPVNy9tF .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+.cid-tuJQSAHKw6 .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
-.cid-sPNPVNy9tF .mbr-gallery-item > div:hover:before {
+.cid-tuJQSAHKw6 .mbr-gallery-item > div:hover:before {
   opacity: 0.7 !important;
 }
-.cid-sPNPVNy9tF .mbr-gallery-title {
+.cid-tuJQSAHKw6 .mbr-gallery-title {
   font-size: .9em;
   position: absolute;
   display: block;
@@ -1273,7 +1272,7 @@ section.lazy-placeholder:after {
   color: #fff;
   z-index: 2;
 }
-.cid-sPNPVNy9tF .mbr-gallery-title:before {
+.cid-tuJQSAHKw6 .mbr-gallery-title:before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -1281,11 +1280,72 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #972424 !important;
   opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-tuJQSGg4Lu {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.cid-tuJQSGg4Lu .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-tuJQSGg4Lu .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tuJQSGg4Lu .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-tuJQSGg4Lu .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-tuJQSGg4Lu .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #972424;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-tuJQSGg4Lu .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-tuJQSGg4Lu .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-tuJQSGg4Lu .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-tuJQSGg4Lu .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #972424 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
 }
 .cid-rl9EmhGxVT {
   padding-top: 15px;
@@ -1717,6 +1777,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-thwhxYhIIC P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-tu3UW1lPCu {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-tu3UW1lPCu h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-tu3UW1lPCu p {
+  color: #767676;
+  text-align: left;
+}
+.cid-tu3UW1lPCu .card-box {
+  padding-top: 2rem;
+}
+.cid-tu3UW1lPCu .card-wrapper {
+  height: 100%;
+}
+.cid-tu3UW1lPCu .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-tu3UW1lPCu P {
   color: #ffffff;
   text-align: center;
 }
