--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1808,6 +1808,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-tzJ12BXNee {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-tzJ12BXNee h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-tzJ12BXNee p {
+  color: #767676;
+  text-align: left;
+}
+.cid-tzJ12BXNee .card-box {
+  padding-top: 2rem;
+}
+.cid-tzJ12BXNee .card-wrapper {
+  height: 100%;
+}
+.cid-tzJ12BXNee .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-tzJ12BXNee P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
